This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Segfault when mutating a memoryview to an array.array
Type: crash Stage:
Components: Interpreter Core Versions: Python 3.0
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: pitrou
Priority: critical Keywords:

Created on 2008-12-07 00:06 by pitrou, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (2)
msg77195 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2008-12-07 00:06
>>> from array import array
>>> a = array('i', range(16))
>>> m = memoryview(a)
>>> m[:] = array('i', range(16))
Erreur de segmentation
msg77247 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2008-12-07 20:27
Fixed in r67650 and r67651.
History
Date User Action Args
2022-04-11 14:56:42adminsetgithub: 48819
2008-12-07 20:27:11pitrousetstatus: open -> closed
resolution: fixed
messages: + msg77247
2008-12-07 00:06:47pitroucreate